# palet

./: Cargo.toml  README.md  flake.nix  install-example.nix  nixos-module.nix
src/: apps.rs  config.rs  database.rs  entry.rs  main.rs  metadata.rs  queryable.rs  schema.rs  style.rs
src/application/: application.rs  mod.rs  parser.rs
