[package]
name = "palet"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.8"
glib = "0.18"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
urlencoding = "2.1"
evalexpr = "11.3"
freedesktop_entry_parser = "1.3.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
